# note

./: shell.md  微前端框架对比-Wujie与Qiankun.md
ai-ml-basics/: 01-Agent智能体.md  02-RAG检索增强生成.md  03-Transform架构.md  04-机器学习基础.md  05-深度学习基础.md  06-Attention机制.md  07-模型推理.md  08-模型优化.md  09-MCP模型上下文协议.md  10-Skill技能.md  11-FunctionCalling函数调用.md  README.md
cc-website-scripts/:  docker-compose.yml  1.md  HTTPS配置操作步骤.md  README.md  SSH密钥快捷登录配置.md  nginx copy.conf  nginx-https.conf  nginx.conf  setup-https.sh
docker-scripts/: 1.pull-images.sh  Docker常用命令.md  docker-compose.yml  端口配置说明.md
frontend-to-ai-agent/demo/fast/: pyproject.toml
frontend-to-ai-agent/demo/fast/src/fastp/: main.py
gitlab-scripts/: README.md  gitlab-config.conf  gitlab-config.conf.example  gitlab-docker-compose.yml  gitlab-manage.sh  init-config.sh  start-gitlab.sh
java/: Collection和List的区别详解.md  JavaUtil包详解.md  Java基础命令说明.md  Java文件结构详解.md  Java生产环境部署指南.md  Java访问修饰符详解.md  Java语法指南.md  Java项目本地运行指南.md  Java项目生成指南.md  Maven使用指南.md  Maven项目生成详解.md  SDKMAN使用指南.md  Set和HashSet区别详解.md  start.md  反射机制详解.md  如何判断多线程环境.md  学习路线.md  异常处理详解.md  文件IO操作详解.md  泛型详解.md  线程安全和并发集合详解.md  访问修饰符概念详解.md  集合框架详解.md  (+1 more)
java-project/: .gitignore  .sdkmanrc  README.md  pom.xml
python-ai/demo/rag-agent/: .gitignore  README.md  main.py  pyproject.toml  rag_core.py
python-ai/demo/rag-agent/documents/: README.md  产品使用手册.md  公司考勤制度.md  常见问题FAQ.md  技术文档-Python开发规范.md
python-ai/demo/rag-agent/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
python-ai/demo/rag-agent/frontend/src/: App.vue
(+52 files in other folders)
