[project]
name = "fastp"
version = "0.1.0"
description = ""
authors = [
    {name = "Eden.huang",email = "rongyao.huang@connext.com.cn"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.6,<0.129.0)"
]

[tool.poetry]
packages = [{include = "fastp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
